force-app/main/default/objects/Opportunity_Contract__c/Opportunity_Contract__c.object-meta.xml
<CustomObject>
    <label>Opportunity Contract</label>
    <nameField>
        <displayFormat>OC-{0000}</displayFormat>
        <label>Opportunity Contract Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Contracts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>