force-app/main/default/objects/Opportunity_Contract__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Opportunity Contracts</relationshipLabel>
    <relationshipName>Opportunity_Contracts</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>