force-app/main/default/objects/Opportunity_Contract__c/fields/Contract_Status__c.field-meta.xml
<CustomField>
    <fullName>Contract_Status__c</fullName>
    <formula>TEXT(Contract__r.Status)</formula>
    <label>Contract Status</label>
    <type>Text</type>
</CustomField>