force-app/main/default/objects/Opportunity_Contract__c/fields/Contract_Status_Text__c.field-meta.xml
<CustomField>
    <fullName>Contract_Status_Text__c</fullName>
    <description>Captures related Contract Status. Used to trigger opportunity updates based on contract status.
This field is populated by a process flow.</description>
    <label>Contract Status</label>
    <length>80</length>
    <type>Text</type>
</CustomField>